# pyskeleton

./: .gitignore  README.md  pyproject.toml
src/pyskeleton/: skeleton.py
tests/: test_skeleton.py
